--- a/src/components/products/productsCart.component.pug
+++ b/src/components/products/productsCart.component.pug
@@ -81,11 +81,11 @@ section.products.productsCart
                     .productsItemGain
                         .productsItemGain__text
                             div.text up to
-                            div.number 10
+                            div.number 10%
                             div.text Power
                         .productsItemGain__text
                             div.text up to
-                            div.number 10
+                            div.number 10%
                             div.text Torque
                     ul 
                         li ICE end hybrid engiens 
@@ -98,7 +98,6 @@ section.products.productsCart
                     button.page__btn.page__btn_notTransparent ADD TO BAG
 
             .productsItem.productsItemCart
-                .productsItemCartLabel BEST SELLER
                 h3.productsItemCartTitle Gtr
                 p.productsItemCartTextBefore Tune your engine and dispaly car readings on 3.5 inch touch screen
                 img.productsItemCartImg(src="assets/images/png/productCart2.png", alt="product")
@@ -108,11 +107,11 @@ section.products.productsCart
                     .productsItemGain
                         .productsItemGain__text
                             div.text up to
-                            div.number 10
+                            div.number 10%
                             div.text Power
                         .productsItemGain__text
                             div.text up to
-                            div.number 10
+                            div.number 10%
                             div.text Torque
                     ul 
                         li ICE end hybrid engiens 
