--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -135,16 +135,16 @@
                 top: 162px
 
         .bannerSelect
-            bottom: -7%
+            bottom: -4%
 
             +sm-block
                 top: 82%
             +md-block
                 top: 58%
-                left: 52%
+                // left: 52%
             +lg-block
                 top: 58%
-                left: 52%
+                // left: 52%
 
     &.bannerChip
         padding-bottom: 25%
@@ -181,16 +181,16 @@
 
         .bannerSelect
             // top: 98%
-            bottom: -7%
+            bottom: -4%
 
             +sm-block
                 top: 82%
             +md-block
                 top: 58%
-                left: 52%
+                // left: 52%
             +lg-block
                 top: 58%
-                left: 52%
+                // left: 52%
 
 
     .page__title-h1
