--- a/backend/wp-content/themes/rschip/css/px/media/screen-and-min-width-1135px.css
+++ b/backend/wp-content/themes/rschip/css/px/media/screen-and-min-width-1135px.css
@@ -30,6 +30,18 @@
   width: calc(25% - 46px);
 }
 
+.banner.bannerRs {
+  padding-bottom: 0;
+}
+
+.banner.bannerRs .bannerImgBg {
+  left: 33%;
+}
+
+.banner.bannerRs .bannerSelect {
+  top: 58%;
+}
+
 .banner.bannerGtr {
   padding-bottom: 0;
 }
@@ -41,7 +53,6 @@
 
 .banner.bannerGtr .bannerSelect {
   top: 58%;
-  left: 52%;
 }
 
 .banner.bannerChip {
@@ -59,20 +70,6 @@
 
 .banner.bannerChip .bannerSelect {
   top: 58%;
-  left: 52%;
-}
-
-.banner.bannerRs {
-  padding-bottom: 0;
-}
-
-.banner.bannerRs .bannerImgBg {
-  left: 33%;
-}
-
-.banner.bannerRs .bannerSelect {
-  top: 58%;
-  left: 52%;
 }
 
 .banner .page__title-h1_big {
@@ -91,6 +88,46 @@
   margin-bottom: 0;
   position: absolute;
   bottom: 70px;
+}
+
+.banner .bannerSelect {
+  top: 68%;
+  width: 100%;
+}
+
+.banner .bannerSelect.fixed {
+  width: auto;
+  left: 100%;
+  top: 50%;
+  -webkit-transform: translate(-100%, -50%);
+  transform: translate(-100%, -50%);
+  height: 20%;
+}
+
+.banner .bannerSelect.fixed .selectBoxActionSelected {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.banner .bannerSelect.fixed .selectBoxContainer {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  border-radius: 16px;
+  padding: 0;
+}
+
+.banner .bannerSelect.fixed .selectBoxContainer .select .select-box {
+  border-right: 0;
+}
+
+.banner .bannerSelect.fixed .selectBoxContainer .select .select-box__list {
+  top: 25px;
 }
 
 .bannerFlexContainer {
@@ -127,11 +164,6 @@
   right: -10px;
   top: 135px;
   width: auto;
-}
-
-.bannerSelect {
-  top: 68%;
-  left: 52%;
 }
 
 .cartDetails {
@@ -207,6 +239,13 @@
   margin-right: -23px;
 }
 
+.cartProductsHeader {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .cartProductsHeader div {
   margin-left: 23px;
   margin-right: 23px;
@@ -245,6 +284,14 @@
 .cartProductPrice {
   width: -webkit-calc(22.22222% - 46px);
   width: calc(22.22222% - 46px);
+}
+
+.cartProductSelect .selectBoxContainer .select {
+  width: 33%;
+}
+
+.cartProductSelect .selectBoxContainer .select .select-box {
+  border-right: 1px solid rgba(255, 255, 255, 0.15);
 }
 
 .debugGrid .parentFlex {
@@ -633,11 +680,6 @@
 }
 
 .headerNavCart {
-  margin-left: 23px;
-  margin-right: 23px;
-}
-
-.headerNavCart {
   margin-left: 5%;
   margin-left: 0;
   margin-right: 0;
@@ -979,7 +1021,7 @@
 }
 
 .productsItemCart {
-  padding: 34px 50px 38px;
+  padding: 88px 50px 38px;
   margin-bottom: 43px;
 }
 
@@ -1017,24 +1059,53 @@
   display: block;
 }
 
-.selectBoxContainer {
-  width: 673px;
-  height: 68px;
-  padding: 20px 0px;
-}
-
-.selectBoxContainer .select:nth-of-type(3) {
-  width: 200px;
-}
-
-.selectBoxContainer .select {
-  height: 100%;
-  width: 200px;
+.selectBoxContainer .select:nth-child(2) .select-box {
   border-right: 1px solid rgba(255, 255, 255, 0.15);
 }
 
-.selectBoxContainer .selectBoxSearch {
-  height: 100%;
+.selectBoxContainer .select {
+  width: auto;
+  border-bottom: 0;
+}
+
+.selectBoxContainer .select.Modification.Selected {
+  margin: 0;
+}
+
+.selectBoxContainer .selectBoxAction {
+  margin: 0 15px;
+  width: auto;
+  margin: 0;
+}
+
+.selectBoxContainer .selectBoxAction.Selected {
+  margin: 0 15px;
+  width: auto;
+  margin: 0;
+}
+
+.selectBoxContainer .selectBoxActionSelected {
+  margin: 3.5px 0px;
+}
+
+.select-box {
+  position: relative;
+}
+
+.select-box__current {
+  padding: 0 15px;
+}
+
+.select-box__icon {
+  right: 15px;
+}
+
+.select-box__list {
+  position: absolute;
+  bottom: auto;
+  top: 40px;
+  max-height: 200px;
+  border-radius: 16px;
 }
 
 .social .page__title-h2_big {
