--- a/backend/wp-content/themes/rschip/css/px/media/screen-and-min-width-768px.css
+++ b/backend/wp-content/themes/rschip/css/px/media/screen-and-min-width-768px.css
@@ -25,6 +25,14 @@
   width: calc(50% - 30px);
 }
 
+.banner.bannerRs {
+  padding-bottom: 0;
+}
+
+.banner.bannerRs .bannerSelect {
+  top: 82%;
+}
+
 .banner.bannerGtr {
   padding-bottom: 0;
 }
@@ -38,14 +46,6 @@
 }
 
 .banner.bannerChip .bannerSelect {
-  top: 82%;
-}
-
-.banner.bannerRs {
-  padding-bottom: 0;
-}
-
-.banner.bannerRs .bannerSelect {
   top: 82%;
 }
 
@@ -65,6 +65,46 @@
   margin-bottom: 55px;
 }
 
+.banner .bannerSelect {
+  top: 72%;
+  width: 100%;
+}
+
+.banner .bannerSelect.fixed {
+  width: auto;
+  left: 100%;
+  top: 50%;
+  -webkit-transform: translate(-100%, -50%);
+  transform: translate(-100%, -50%);
+  height: 20%;
+}
+
+.banner .bannerSelect.fixed .selectBoxActionSelected {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.banner .bannerSelect.fixed .selectBoxContainer {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  border-radius: 16px;
+  padding: 0;
+}
+
+.banner .bannerSelect.fixed .selectBoxContainer .select .select-box {
+  border-right: 0;
+}
+
+.banner .bannerSelect.fixed .selectBoxContainer .select .select-box__list {
+  top: 25px;
+}
+
 .bannerFlexContainer {
   margin-left: -30px;
   margin-right: -30px;
@@ -82,10 +122,6 @@
 
 .bannerImgChip {
   top: 61%;
-}
-
-.bannerSelect {
-  top: 72%;
 }
 
 .cartDetails {
@@ -127,6 +163,13 @@
   margin-right: -15px;
 }
 
+.cartProductsHeader {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .cartProductsHeader div {
   margin-left: 15px;
   margin-right: 15px;
@@ -145,6 +188,14 @@
 .cartProductPrice {
   margin-left: 15px;
   margin-right: 15px;
+}
+
+.cartProductSelect .selectBoxContainer .select {
+  width: 33%;
+}
+
+.cartProductSelect .selectBoxContainer .select .select-box {
+  border-right: 1px solid rgba(255, 255, 255, 0.15);
 }
 
 .debugGrid .parentFlex {
@@ -469,11 +520,6 @@
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end;
-}
-
-.headerNavCart {
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
 .headerNavCart {
@@ -807,7 +853,7 @@
 }
 
 .productsItemCart {
-  padding: 34px 50px 38px;
+  padding: 88px 50px 38px;
   margin-bottom: 43px;
 }
 
@@ -825,24 +871,57 @@
   display: block;
 }
 
-.selectBoxContainer {
-  width: 673px;
-  height: 68px;
-  padding: 20px 0px;
-}
-
-.selectBoxContainer .select:nth-of-type(3) {
-  width: 200px;
-}
-
-.selectBoxContainer .select {
-  height: 100%;
-  width: 200px;
+.selectBoxContainer .select:nth-child(2) .select-box {
   border-right: 1px solid rgba(255, 255, 255, 0.15);
 }
 
-.selectBoxContainer .selectBoxSearch {
-  height: 100%;
+.selectBoxContainer .select {
+  width: auto;
+  border-bottom: 0;
+}
+
+.selectBoxContainer .select.Modification.Selected {
+  margin: 0;
+}
+
+.selectBoxContainer .selectBoxAction {
+  margin: 0 15px;
+  width: auto;
+  margin: 0;
+}
+
+.selectBoxContainer .selectBoxAction.Selected {
+  margin: 0 15px;
+  width: auto;
+  margin: 0;
+}
+
+.selectBoxContainer .selectBoxActionSelected {
+  margin: 3.5px 0px;
+}
+
+.selectBoxContainer .selectBoxActionSelected .page__btn {
+  padding: 12px 10px;
+}
+
+.select-box {
+  position: relative;
+}
+
+.select-box__current {
+  padding: 0 15px;
+}
+
+.select-box__icon {
+  right: 15px;
+}
+
+.select-box__list {
+  position: absolute;
+  bottom: auto;
+  top: 40px;
+  max-height: 200px;
+  border-radius: 16px;
 }
 
 .social .page__title-h2_big {
