--- a/backend/wp-content/themes/rschip/css/px/styles-sprites.css
+++ b/backend/wp-content/themes/rschip/css/px/styles-sprites.css
@@ -1,4 +1,5 @@
 .svg-iconArrowSelect,
+.svg-iconArrowSuccess,
 .svg-iconArrowsLR,
 .svg-iconArrowsUp,
 .svg-iconCPU,
@@ -50,6 +51,7 @@
 .svg-iconSpeedometer,
 .svg-iconSpeedometerGray,
 .svg-iconSpeedometrLight,
+.svg-iconSuccess,
 .svg-iconTrash,
 .svg-iconUnlimit,
 .svg-iconWheel,
@@ -59,7 +61,7 @@
 }
 
 .svg-iconArrowSelect {
-  background-position: 52.359550561797754% 42.31738035264484%;
+  background-position: 52.359550561797754% 38.62068965517241%;
 }
 
 .svg-iconArrowSelect-box {
@@ -67,8 +69,17 @@
   height: 25px;
 }
 
+.svg-iconArrowSuccess {
+  background-position: 35.944700460829495% 87.26415094339623%;
+}
+
+.svg-iconArrowSuccess-box {
+  width: 38px;
+  height: 36px;
+}
+
 .svg-iconArrowsLR {
-  background-position: 72.88135593220339% 43.54838709677419%;
+  background-position: 72.88135593220339% 39.51219512195122%;
 }
 
 .svg-iconArrowsLR-box {
@@ -77,7 +88,7 @@
 }
 
 .svg-iconArrowsUp {
-  background-position: 86.49289099526067% 70.66666666666667%;
+  background-position: 86.49289099526067% 64.16464891041163%;
 }
 
 .svg-iconArrowsUp-box {
@@ -86,7 +97,7 @@
 }
 
 .svg-iconCPU {
-  background-position: 12.98076923076923% 85.51912568306011%;
+  background-position: 12.98076923076923% 77.47524752475248%;
 }
 
 .svg-iconCPU-box {
@@ -95,7 +106,7 @@
 }
 
 .svg-iconCar {
-  background-position: 57.389162561576356% 13.896457765667575%;
+  background-position: 57.389162561576356% 12.592592592592593%;
 }
 
 .svg-iconCar-box {
@@ -104,7 +115,7 @@
 }
 
 .svg-iconCart {
-  background-position: 41.411764705882355% 52.8%;
+  background-position: 41.411764705882355% 47.94188861985472%;
 }
 
 .svg-iconCart-box {
@@ -113,7 +124,7 @@
 }
 
 .svg-iconChat {
-  background-position: 52.857142857142854% 84.5945945945946%;
+  background-position: 52.857142857142854% 76.7156862745098%;
 }
 
 .svg-iconChat-box {
@@ -122,7 +133,7 @@
 }
 
 .svg-iconChatGray {
-  background-position: 99.28400954653938% 59.34959349593496%;
+  background-position: 99.28400954653938% 53.80835380835381%;
 }
 
 .svg-iconChatGray-box {
@@ -131,7 +142,7 @@
 }
 
 .svg-iconChip {
-  background-position: 21.64179104477612% 16.666666666666668%;
+  background-position: 21.64179104477612% 15.099009900990099%;
 }
 
 .svg-iconChip-box {
@@ -140,7 +151,7 @@
 }
 
 .svg-iconChipGray {
-  background-position: 99.28400954653938% 73.71273712737127%;
+  background-position: 99.28400954653938% 66.83046683046683%;
 }
 
 .svg-iconChipGray-box {
@@ -149,7 +160,7 @@
 }
 
 .svg-iconChipWhite {
-  background-position: 0 69.97245179063361%;
+  background-position: 0 63.34164588528678%;
 }
 
 .svg-iconChipWhite-box {
@@ -158,7 +169,7 @@
 }
 
 .svg-iconCloud {
-  background-position: 57.389162561576356% 29.444444444444443%;
+  background-position: 57.389162561576356% 26.633165829145728%;
 }
 
 .svg-iconCloud-box {
@@ -167,7 +178,7 @@
 }
 
 .svg-iconCompareChart {
-  background-position: 26.442307692307693% 85.05434782608695%;
+  background-position: 26.442307692307693% 77.0935960591133%;
 }
 
 .svg-iconCompareChart-box {
@@ -185,7 +196,7 @@
 }
 
 .svg-iconDynoChart {
-  background-position: 39.90384615384615% 84.5945945945946%;
+  background-position: 39.90384615384615% 76.7156862745098%;
 }
 
 .svg-iconDynoChart-box {
@@ -194,7 +205,7 @@
 }
 
 .svg-iconEmailGray {
-  background-position: 70.32710280373831% 55.064935064935064%;
+  background-position: 70.32710280373831% 50.118203309692674%;
 }
 
 .svg-iconEmailGray-box {
@@ -203,7 +214,7 @@
 }
 
 .svg-iconEmailGray2 {
-  background-position: 53.317535545023695% 68.27956989247312%;
+  background-position: 53.317535545023695% 61.951219512195124%;
 }
 
 .svg-iconEmailGray2-box {
@@ -212,7 +223,7 @@
 }
 
 .svg-iconEmalPurple {
-  background-position: 28.19277108433735% 68.46361185983828%;
+  background-position: 28.19277108433735% 62.10268948655257%;
 }
 
 .svg-iconEmalPurple-box {
@@ -221,7 +232,7 @@
 }
 
 .svg-iconErrors {
-  background-position: 0 54.09836065573771%;
+  background-position: 0 49.00990099009901%;
 }
 
 .svg-iconErrors-box {
@@ -230,7 +241,7 @@
 }
 
 .svg-iconFacebookGray {
-  background-position: 43.89140271493213% 96.1038961038961%;
+  background-position: 8.597285067873303% 99.76359338061465%;
 }
 
 .svg-iconFacebookGray-box {
@@ -239,7 +250,7 @@
 }
 
 .svg-iconFacebookWhite {
-  background-position: 85.26077097505669% 81.72323759791122%;
+  background-position: 85.26077097505669% 74.34679334916865%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -248,7 +259,7 @@
 }
 
 .svg-iconFreeShipping {
-  background-position: 73.05825242718447% 15.902964959568733%;
+  background-position: 73.05825242718447% 14.425427872860636%;
 }
 
 .svg-iconFreeShipping-box {
@@ -266,7 +277,7 @@
 }
 
 .svg-iconFuelGray {
-  background-position: 86.49289099526067% 15.405405405405405%;
+  background-position: 86.49289099526067% 13.970588235294118%;
 }
 
 .svg-iconFuelGray-box {
@@ -275,7 +286,7 @@
 }
 
 .svg-iconGTR {
-  background-position: 0 16.343490304709142%;
+  background-position: 0 14.786967418546366%;
 }
 
 .svg-iconGTR-box {
@@ -293,7 +304,7 @@
 }
 
 .svg-iconHybrEng {
-  background-position: 16.216216216216218% 53.083109919571044%;
+  background-position: 16.216216216216218% 48.175182481751825%;
 }
 
 .svg-iconHybrEng-box {
@@ -302,7 +313,7 @@
 }
 
 .svg-iconInstagramGray {
-  background-position: 35.944700460829495% 96.35416666666667%;
+  background-position: 0 100%;
 }
 
 .svg-iconInstagramGray-box {
@@ -311,7 +322,7 @@
 }
 
 .svg-iconInstagramWhite {
-  background-position: 73.14814814814815% 66.49214659685863%;
+  background-position: 73.14814814814815% 60.476190476190474%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -329,7 +340,7 @@
 }
 
 .svg-iconMarkLocationGray {
-  background-position: 31.01851851851852% 31.83023872679045%;
+  background-position: 31.01851851851852% 28.91566265060241%;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -338,7 +349,7 @@
 }
 
 .svg-iconMarkLocationGray2 {
-  background-position: 85.88235294117646% 29.45945945945946%;
+  background-position: 85.88235294117646% 26.715686274509803%;
 }
 
 .svg-iconMarkLocationGray2-box {
@@ -347,7 +358,7 @@
 }
 
 .svg-iconMarkLocationPurple {
-  background-position: 98.11320754716981% 15.258855585831062%;
+  background-position: 98.11320754716981% 13.82716049382716%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -356,7 +367,7 @@
 }
 
 .svg-iconMarkMapPurple {
-  background-position: 0 34.883720930232556%;
+  background-position: 0 31.413612565445025%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -365,7 +376,7 @@
 }
 
 .svg-iconMarker {
-  background-position: 98.3451536643026% 85.30183727034121%;
+  background-position: 98.3451536643026% 77.56563245823389%;
 }
 
 .svg-iconMarker-box {
@@ -374,7 +385,7 @@
 }
 
 .svg-iconPatent {
-  background-position: 0 85.75342465753425%;
+  background-position: 0 77.66749379652606%;
 }
 
 .svg-iconPatent-box {
@@ -383,7 +394,7 @@
 }
 
 .svg-iconPhoneGray {
-  background-position: 40% 31.83023872679045%;
+  background-position: 40% 28.91566265060241%;
 }
 
 .svg-iconPhoneGray-box {
@@ -392,7 +403,7 @@
 }
 
 .svg-iconPhoneGray2 {
-  background-position: 84.68677494199535% 43.513513513513516%;
+  background-position: 84.68677494199535% 39.46078431372549%;
 }
 
 .svg-iconPhoneGray2-box {
@@ -410,7 +421,7 @@
 }
 
 .svg-iconPhoneWhite {
-  background-position: 84.68677494199535% 57.567567567567565%;
+  background-position: 84.68677494199535% 52.205882352941174%;
 }
 
 .svg-iconPhoneWhite-box {
@@ -419,7 +430,7 @@
 }
 
 .svg-iconPinion {
-  background-position: 99.52153110047847% 30.16304347826087%;
+  background-position: 99.52153110047847% 27.339901477832512%;
 }
 
 .svg-iconPinion-box {
@@ -428,7 +439,7 @@
 }
 
 .svg-iconPower {
-  background-position: 99.52153110047847% 44.83695652173913%;
+  background-position: 99.52153110047847% 40.64039408866995%;
 }
 
 .svg-iconPower-box {
@@ -455,7 +466,7 @@
 }
 
 .svg-iconReturnCircle {
-  background-position: 65.23809523809524% 84.5945945945946%;
+  background-position: 65.23809523809524% 76.7156862745098%;
 }
 
 .svg-iconReturnCircle-box {
@@ -464,7 +475,7 @@
 }
 
 .svg-iconRudder {
-  background-position: 41.33016627078385% 68.27956989247312%;
+  background-position: 41.33016627078385% 61.951219512195124%;
 }
 
 .svg-iconRudder-box {
@@ -473,7 +484,7 @@
 }
 
 .svg-iconSearch {
-  background-position: 63.80510440835267% 66.66666666666667%;
+  background-position: 63.80510440835267% 60.62052505966587%;
 }
 
 .svg-iconSearch-box {
@@ -482,7 +493,7 @@
 }
 
 .svg-iconShield {
-  background-position: 77.25118483412322% 84.5945945945946%;
+  background-position: 77.25118483412322% 76.7156862745098%;
 }
 
 .svg-iconShield-box {
@@ -491,7 +502,7 @@
 }
 
 .svg-iconSpeed {
-  background-position: 0 100%;
+  background-position: 0 90.68627450980392%;
 }
 
 .svg-iconSpeed-box {
@@ -500,7 +511,7 @@
 }
 
 .svg-iconSpeedometer {
-  background-position: 12.380952380952381% 100%;
+  background-position: 12.380952380952381% 90.68627450980392%;
 }
 
 .svg-iconSpeedometer-box {
@@ -509,7 +520,7 @@
 }
 
 .svg-iconSpeedometerGray {
-  background-position: 24.761904761904763% 100%;
+  background-position: 24.761904761904763% 90.68627450980392%;
 }
 
 .svg-iconSpeedometerGray-box {
@@ -518,7 +529,7 @@
 }
 
 .svg-iconSpeedometrLight {
-  background-position: 73.05825242718447% 29.72972972972973%;
+  background-position: 73.05825242718447% 26.96078431372549%;
 }
 
 .svg-iconSpeedometrLight-box {
@@ -526,8 +537,17 @@
   height: 52px;
 }
 
+.svg-iconSuccess {
+  background-position: 44.70046082949309% 87.26415094339623%;
+}
+
+.svg-iconSuccess-box {
+  width: 38px;
+  height: 36px;
+}
+
 .svg-iconTrash {
-  background-position: 30.679156908665107% 53.083109919571044%;
+  background-position: 30.679156908665107% 48.175182481751825%;
 }
 
 .svg-iconTrash-box {
@@ -536,7 +556,7 @@
 }
 
 .svg-iconUnlimit {
-  background-position: 15.92039800995025% 31.83023872679045%;
+  background-position: 15.92039800995025% 28.91566265060241%;
 }
 
 .svg-iconUnlimit-box {
@@ -545,7 +565,7 @@
 }
 
 .svg-iconWheel {
-  background-position: 14.251207729468598% 68.64864864864865%;
+  background-position: 14.251207729468598% 62.254901960784316%;
 }
 
 .svg-iconWheel-box {
@@ -554,7 +574,7 @@
 }
 
 .svg-iconYoutubeGray {
-  background-position: 51.86046511627907% 51.295336787564764%;
+  background-position: 51.86046511627907% 46.698113207547166%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -563,7 +583,7 @@
 }
 
 .svg-iconYoutubeWhite {
-  background-position: 39.953271028037385% 21.09375%;
+  background-position: 39.953271028037385% 19.194312796208532%;
 }
 
 .svg-iconYoutubeWhite-box {
@@ -728,6 +748,20 @@
   background-position: 0px -212px;
   width: 50px;
   height: 25px;
+}
+
+.iconSuccess {
+  background-image: url(../assets/icons/png/spritePNG.png);
+  background-position: -68px -212px;
+  width: 18px;
+  height: 16px;
+}
+
+.iconArrowSelect {
+  background-image: url(../assets/icons/png/spritePNG.png);
+  background-position: -274px -192px;
+  width: 7px;
+  height: 5px;
 }
 
 .modalGallary .icon-close {
