--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -65,16 +65,16 @@
                 top: 162px
 
         .bannerSelect
-            bottom: -7%
+            bottom: -4%
 
             +sm-block
                 top: 82%
             +md-block
                 top: 58%
-                left: 52%
+                // left: 52%
             +lg-block
                 top: 58%
-                left: 52%
+                // left: 52%
 
     &.bannerChip
         padding-bottom: 25%
@@ -111,16 +111,16 @@
 
         .bannerSelect
             // top: 98%
-            bottom: -7%
+            bottom: -4%
 
             +sm-block
                 top: 82%
             +md-block
                 top: 58%
-                left: 52%
+                // left: 52%
             +lg-block
                 top: 58%
-                left: 52%
+                // left: 52%
 
 
     .page__title-h1
