--- a/backend/wp-content/themes/rschip/style.css
+++ b/backend/wp-content/themes/rschip/style.css
@@ -4,6 +4,6 @@ Theme Name: RsChip
 Theme URI: http://u1514014.isp.regruhosting.ru/themes/rschip/
 Author: @gromov_ilia https://t.me/gromov_ilia
 Author URI: http://u1514014.isp.regruhosting.ru/
-Description: Our 2019 default theme is designed to show off the power of the block editor. It features custom styles for all the default blocks, and is built so that what you see in the editor looks like what you'll see on your website. Twenty Nineteen is designed to be adaptable to a wide range of websites, whether you’re running a photo blog, launching a new business, or supporting a non-profit. Featuring ample whitespace and modern sans-serif headlines paired with classic serif body text, it's built to be beautiful on all screen sizes.
-Version: 1.1
+Description: Site Aroma RsChip
+Version: 1.0
 */
