add news gallary menu widgets

--- a/src/components/news/news.component.sass
+++ b/src/components/news/news.component.sass
@@ -71,6 +71,8 @@
             display: block
         +lg-block
             display: block
+    .modalContent
+        display: none
         
 
 .newsItemImg
