--- a/src/components/socialIcons/socialIcons.component.pug
+++ b/src/components/socialIcons/socialIcons.component.pug
@@ -1,5 +1,8 @@
 //-socialIcons
 .socialIcons
-    a.icon.svg-iconInstagramGray.svg-iconInstagramGray-box(href="javascript:void(0)")
-    a.icon.svg-iconFacebookGray.svg-iconFacebookGray-box(href="javascript:void(0)")
-    a.icon.svg-iconYoutubeGray.svg-iconYoutubeGray-box(href="javascript:void(0)")
+    a.icon(href="javascript:void(0)")
+        img(src="assets/images/svg/iconInstagramWhite.svg", alt="iconInstagramWhite")
+    a.icon(href="javascript:void(0)")
+        img(src="assets/images/svg/iconFacebookWhite.svg", alt="iconFacebookWhite")
+    a.icon(href="javascript:void(0)")
+        img(src="assets/images/svg/iconYoutubeWhite.svg", alt="iconYoutubeWhite")
