--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -1773,6 +1773,8 @@ html
             display: block
         +lg-block
             display: block
+    .modalContent
+        display: none
         
 
 .newsItemImg
