--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -20,4 +20,5 @@ block append script
 	script(src="libs/js/swiper-bundle.min.js")
 	script(src="js/faq/faq.component.js")
 	script(src="js/modals/modalGallary.component.js")
+	script(src="js/modals/modalNews.component.js")
 	script(src="js/select/select.component.js")
