--- a/backend/wp-content/themes/rschip/src/components/cartForm/cartForm.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/cartForm/cartForm.component.sass
@@ -4,15 +4,14 @@
     +col
     +size(9)
     +size-md(6.2)
-    +size-lg(6.2)
     border: 1px solid #474747
     border-radius: 15px
     padding: 25px 51px
     .page__input
         +col
         +size(9)
+        +size-sm(9)
         +size-md(9)
-        +size-lg(9)
         margin-bottom: 40px
     
     .name,
@@ -22,8 +21,8 @@
     .year
         +col
         +size(9)
+        +size-sm(9)
         +size-md(9/2)
-        +size-lg(9/2)
         
 .cartFormRow
     +row-flex
