--- a/backend/wp-content/themes/rschip/src/components/banner/banner.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/banner/banner.component.pug
@@ -1,23 +1,14 @@
-section.banner
-    .wrapper
-        .bannerFlexContainer
-            .bannerText
-                h1.page__title-h1_big POWER
-                h1.page__title-h1
-                    span.page_red More power     
-                    | for 
-                    span.block your car with RSCHIP
-                p.pageText Increase power, save fuel, create dyno charts, Measure acceleration and more
-                include ../socialIcons/socialIcons.component.pug
-            .bannerImgBg
-                picture 
-                    source(type="image/png" srcset="assets/images/png/main/imgBannerBg_1920.png" media="(min-width: 1441px)")
-                    source(type="image/png" srcset="assets/images/png/main/imgBannerBg_1440.png" media="(min-width: 1440px)")
-                    source(type="image/png" srcset="assets/images/png/main/imgBannerBg_992.png" media="(min-width: 992px)")
-                    source( type="image/png" srcset="assets/images/png/main/imgBannerBg_768.png" media="(min-width: 768px)")
-                    img(src="assets/images/png/main/imgBannerBg_320.png", alt="imgBannerBg")
-            .bannerSelect
-                include ../select/selectBox.mixin.pug
-                +selectBox('Rs')
+include ./banner.mixin.pug
++banner({
+    title: {
+        big: "POWER",
+        span1: "More power",
+        span2: "for",
+        span3: "your car with RSCHIP"
+    },
+    description: "Increase power, save fuel, create dyno charts, Measure acceleration and more",
+    imageName: "main/imgBannerBg"
+})
+
 
         
