--- a/backend/wp-content/themes/rschip/src/components/banner/banner.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/banner/banner.component.sass
@@ -103,8 +103,8 @@
         &_big
             +sm-block
                 top: 177px
-            +md-block
-                top: 115px
+            // +md-block
+            //     top: 115px
 
         span.block
             display: block
