--- a/backend/wp-content/themes/rschip/src/components/footer/footer.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/footer/footer.component.sass
@@ -102,6 +102,7 @@
     +col()
     +size(9)
     +size-sm(4.5)
+    +size-md(4.5)
     display: flex
     align-items: center
     margin-bottom: 20px
@@ -177,9 +178,11 @@
     .item1
         +size(9)
         +size-sm(4)
+        +size-md(4)
     .item2
         +size(9)
         +size-sm(2)
+        +size-md(2)
 
         display: flex
         justify-content: center
@@ -187,6 +190,7 @@
     .item3
         +size(9)
         +size-sm(3)
+        +size-md(3)
 
         
 
