--- a/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
+++ b/backend/wp-content/themes/rschip/src/sass/blocks/page.sass
@@ -36,7 +36,7 @@
             position: relative
             text-align: center
             &_big
-                font-family: #{$SFUIDisplay}-Bold
+                font-family: SFUIDisplay-Heavy
                 font-size: 64px
                 line-height: 100%
                 color: rgba(255, 255, 255, 0.04)
