--- a/backend/wp-content/themes/rschip/src/pages/chip/chip.pug
+++ b/backend/wp-content/themes/rschip/src/pages/chip/chip.pug
@@ -11,12 +11,12 @@ block append style
 block content
 	main.page.pageChip
 		include ../../components/banner/bannerChip.component.pug
-		include ../../components/productBlocks/productChip/power.component.pug
-		include ../../components/productBlocks/productChip/steps.component.pug
-		include ../../components/productBlocks/productChip/howitworkChip.component.pug
-		include ../../components/productBlocks/performanceChip.component.pug
-		include ../../components/productBlocks/productChip/optimizeBlockChip.component.pug
-		include ../../components/productBlocks/productChip/productSliderChip.component.pug
+		include ../../components/power/power.component.pug
+		include ../../components/steps/stepsChip.component.pug
+		include ../../components/howitwork/howitworkChip.component.pug
+		include ../../components/performance/performanceChip.component.pug
+		include ../../components/optimizeBlockChip/optimizeBlockChip.component.pug
+		include ../../components/productSlider/productSliderChip.component.pug
 		include ../../components/faq/faq.component.pug
 
 block modals
